Fixed word wrapping on select options

--- a/packages/visual-stack/src/components/Form.css
+++ b/packages/visual-stack/src/components/Form.css
@@ -230,6 +230,7 @@ div.react-select__indicator {
 
 div.react-select__option {
   padding: 6px 12px;
+  word-break: break-all;
 }
 
 div.input-error,
